--- a/animal_quiz.html
+++ b/animal_quiz.html
@@ -9,7 +9,7 @@
   <body>
     <strong>Privacy Policy</strong> 
     <p>
-      Holoso built the Animal Quiz app as
+      Holoso built the Wild Guesses app as
       an Ad Supported app. This SERVICE is provided by
       Holoso at no cost and is intended for use as
       is.
@@ -29,7 +29,7 @@
     <p>
       The terms used in this Privacy Policy have the same meanings
       as in our Terms and Conditions, which is accessible at
-      Animal Quiz unless otherwise defined in this Privacy Policy.
+      Wild Guesses unless otherwise defined in this Privacy Policy.
     </p>
     <p><strong>Information Collection and Use</strong></p>
     <p>
@@ -52,9 +52,6 @@
         <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li>
         <li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
         <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
-        <!----><!----><!----><!----><!----><!----><!---->
-        <li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li>
-        <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
       </ul>
     </div>
     <p><strong>Log Data</strong></p>
