--- a/what_to_do.html
+++ b/what_to_do.html
@@ -31,7 +31,7 @@
 <p>We do not share user data with other companies and organizations.</p>
 <h2>Changes to This Privacy Policy</h2>
 <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
-<p>This policy is effective as of @Tuesday</p>
+<p>This version of the Privacy Policy was last updated on 10 February 2023.</p>
 <h2>Contact Us</h2>
 <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:holoso.team@gmail.com">holoso.team@gmail.com</a>.</p>
 </body>
