--- a/art_mate.html
+++ b/art_mate.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width'>
+  <title>Privacy Policy</title>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      padding: 1em;
+    }
+  </style>
+</head>
+<body>
+<h1>Privacy Policy</h1>
+<p>Holoso built the Art Mate: what to draw? app as an Ad Supported app. This SERVICE is provided by Holoso at no cost and is intended for use as is.</p>
+<p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
+<p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. If you do not wish us to collect and use your data in the way described in this Privacy Policy, you should stop using our application. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+<h2>Information Collection and Use</h2>
+<p>Information that we collect:</p>
+<ul>
+<li>Approximate location by masked IP address to provide appropriate advertisement</li>
+<li>Device metadata for analytics purposes</li>
+<li>Advertising ID to provide appropriate advertisement</li>
+<li>App-instance ID (this identifier is not associated with a user identifier) for analytics purposes</li>
+<li>Stack traces, app lifecycle events, relevant device metadata and application state, diagnostic information used for analytics to collect data about how users use the app or how it performs</li>
+</ul>
+<p>We use Crashlytics service in our applications. Please refer to their <a href="https://firebase.google.com/terms/crashlytics-app-distribution-data-processing-terms/">Privacy Policy</a>.</p>
+<p>We use Firebase analytics in our applications. Please refer to <a href="https://firebase.google.com/terms/analytics/">this page</a>.</p>
+<p>We use AdMob advertising service in our applications. Please refer also to <a href="https://support.google.com/admob/answer/6128543?hl=en">this page</a> for additional information.</p>
+<p>We use Google Play Games Services in our applications. Please refer to <a href="https://developers.google.com/games/services/terms">this page</a>.</p>
+<p>We do not automatically collect any personal information.</p>
+<p>We do not share user data with other companies and organizations.</p>
+<h2>Changes to This Privacy Policy</h2>
+<p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+<p>This version of the Privacy Policy was last updated on 6 August 2023.</p>
+<h2>Contact Us</h2>
+<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:holoso.team@gmail.com">holoso.team@gmail.com</a>.</p>
+</body>
+
+</html>
